add verification of id and add not found id in users-controller + add in component-doc
