# src/api/doc/api-doc.yml
@@ -1,11 +1,41 @@
----
 openapi: 3.0.0
-
+info:
+  description: This is a sample server model based on koa with JWT authentication.
+  version: 1.0.0
+  title: NODE API REST MODEL
+  contact:
+    email: youremail@email.com
+servers:
+  - url: 'http://localhost:8080/api'
+    description: Server model
 tags:
+  - name: Authentication
+    description: Everything about Authentication
   - name: Users
     description: Everything about Users
-
 paths:
+  /auth:
+    post:
+      tags:
+        - Authentication
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Authentication'
+            example:
+              email: JohnDoe@gmail.com
+              password: password
+      responses:
+        '200':
+          description: return jwt Bearer token
+          content:
+            application/json:
+              example:
+                token: 'a token contain payload {id, email, admin} of user'
+        '400':
+          $ref: '#/components/responses/BadRequest'
   /users:
     get:
       tags:
@@ -14,7 +44,7 @@ paths:
       security:
         - bearerAuth: []
       responses:
-        200:
+        '200':
           description: return list of all users
           content:
             application/json:
@@ -35,7 +65,7 @@ paths:
               email: user@email.com
               password: password
       responses:
-        200:
+        '200':
           description: return created user
           content:
             application/json:
@@ -43,11 +73,11 @@ paths:
                 $ref: '#/components/schemas/User'
               example:
                 id: 5c740a7de95c6ee5b1c00640
-                email: "JohnDoe@email.com"
-                createdOn: 2019-02-25 16:32:13.077
-        400:
+                email: JohnDoe@email.com
+                createdOn: 2019-02-25T16:32:13.077Z
+        '400':
           $ref: '#/components/responses/BadRequest'
-  /users/{userId}:
+  '/users/{userId}':
     get:
       tags:
         - Users
@@ -62,7 +92,7 @@ paths:
           schema:
             type: string
       responses:
-        200:
+        '200':
           description: Return a user
           content:
             application/json:
@@ -70,10 +100,10 @@ paths:
                 $ref: '#/components/schemas/User'
               example:
                 id: 5c740a7de95c6ee5b1c00640
-                email: "JohnDoe@email.com"
-                createdOn: 2019-02-25 16:32:13.077
-        404:
-          $ref: "#/components/responses/NotFound"
+                email: JohnDoe@email.com
+                createdOn: 2019-02-25T16:32:13.077Z
+        '404':
+          $ref: '#/components/responses/NotFound'
     put:
       tags:
         - Users
@@ -97,7 +127,7 @@ paths:
               email: user@email.com
               password: password
       responses:
-        200:
+        '200':
           description: Return updated user
           content:
             application/json:
@@ -105,14 +135,14 @@ paths:
                 $ref: '#/components/schemas/User'
               example:
                 id: 5c740a7de95c6ee5b1c00640
-                email: "JohnDoe@email.com"
-                createdOn: 2019-02-25 16:32:13.077
-        400:
+                email: JohnDoe@email.com
+                createdOn: 2019-02-25T16:32:13.077Z
+        '400':
           $ref: '#/components/responses/BadRequest'
-        401:
+        '401':
           $ref: '#/components/responses/Unauthorized'
-        404:
-          $ref: "#/components/responses/NotFound"
+        '404':
+          $ref: '#/components/responses/NotFound'
     delete:
       tags:
         - Users
@@ -127,17 +157,71 @@ paths:
           schema:
             type: string
       responses:
-        200:
+        '200':
           description: Success
-        400:
+        '400':
           $ref: '#/components/responses/BadRequest'
-        401:
+        '401':
           $ref: '#/components/responses/Unauthorized'
-        404:
-            $ref: "#/components/responses/NotFound"
-
+        '404':
+          $ref: '#/components/responses/NotFound'
 components:
+  responses:
+    NotFound:
+      description: The specified resource was not found
+      content:
+        application/json:
+          schema:
+            type: object
+            properties:
+              error:
+                type: string
+            required:
+              - error
+            example:
+              error: NotFound
+    BadRequest:
+      description: Bad request
+      content:
+        application/json:
+          schema:
+            type: object
+            properties:
+              error:
+                type: string
+            required:
+              - error
+            example:
+              error: BadRequest
+    Unauthorized:
+      description: Authorization information is missing or invalid.
+      content:
+        application/json:
+          schema:
+            type: object
+            properties:
+              error:
+                type: string
+            required:
+              - message
+            example:
+              error: PermissionDenied
+  securitySchemes:
+    bearerAuth:
+      type: http
+      scheme: bearer
+      bearerFormat: JWT
   schemas:
+    Authentication:
+      type: object
+      properties:
+        email:
+          type: string
+        password:
+          type: string
+      required:
+        - id
+        - password
     User:
       type: object
       properties:
@@ -151,5 +235,3 @@ components:
         - id
         - email
         - password
-       
-    
